css/pricing-panel.css
#pricing-panel {
    background: hsl(0, 0%, 100%);
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    padding: 2em;
    border-radius: 1em;
    box-shadow: 0px 10px 10px  hsl(0, 0%, 80%);
}

#pricing-panel>h2{
    font-size: 1rem;
    color:  hsl(225, 20%, 60%);
    text-transform: uppercase;
}

